// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct aggregate pipeline 1`] = `
{
  "conditions": {
    "a": "some-filter-on-a",
  },
  "pipeline": [
    {
      "$match": {
        "c": "this-is-from-another-collection",
      },
    },
  ],
}
`;

exports[`should return correct conditions for AND comparison 1`] = `
{
  "conditions": {
    "$and": [
      {
        "status": "DISABLED",
      },
      {
        "name": "Jon",
      },
    ],
  },
  "pipeline": [],
}
`;

exports[`should return correct conditions for OR comparison 1`] = `
{
  "conditions": {
    "$or": [
      {
        "status": "DISABLED",
      },
      {
        "name": "Disabled User",
      },
    ],
  },
  "pipeline": [],
}
`;

exports[`should return correct conditions for mapped key 1`] = `
{
  "conditions": {
    "my.nested.tags": {
      "$all": [
        "a",
        "b",
      ],
    },
  },
  "pipeline": [],
}
`;

exports[`should return correct conditions for nested comparison 1`] = `
{
  "conditions": {
    "$and": [
      {
        "$or": [
          {
            "status": "DISABLED",
          },
          {
            "name": "Disabled User",
          },
        ],
      },
      {
        "$or": [
          {
            "role": "ADMIN",
          },
          {
            "name": "Admin",
          },
        ],
      },
    ],
  },
  "pipeline": [],
}
`;

exports[`should return correct conditions when blacklisting some filters on mapping 1`] = `
{
  "conditions": {
    "a": "b",
  },
  "pipeline": [],
}
`;

exports[`should return correct conditions when using format function 1`] = `
{
  "conditions": {
    "a": "something-else",
  },
  "pipeline": [],
}
`;
